assets/css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cinzel&display=swap");

/* font-family: 'Amatic SC', cursive;
font-family: 'Cinzel', serif; */
html {
  font-family: "Amatic SC", cursive, sans-serif;
}

body,
html {
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  cursor: url("../images/curson_btn_pa2_icon.ico"), auto;
}

.bg,
.main-menu {
  background-image: url("../images/underworld.jpg");
  background-color: darkslategray;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  -o-background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  height: 100%;

}

.bg {
  display: block;
}

a {
  text-decoration: none;
  color: rgba(255, 255, 255, 1);
}

#scores {
  color: rgba(255, 255, 255, 1);
  font-size: 1.3em;
  writing-mode: vertical-rl;
}

#scores > h2 {
  display: inline-block;
  padding: 1rem;
  margin: 0px;
}

#scores > h2 > span {
  writing-mode: horizontal-tb;
}

#game-status {
  font-size: 35px;
  font-weight: bold;
  text-align: center;
}

#restart{
  transform: rotate(-90deg);

}


.game-name {
  margin-top: 0px;
  padding-top: 1rem;
  font-size: 50px;
  color: rgba(255, 255, 255, 1);
  text-align: center;
  text-decoration: none;
}

.main-game-area {
  margin: 0px;
  padding: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#underworld-bg {
  position: relative;
}

/* CSS example from https://getcssscan.com/css-buttons-examples*/
.button-34 {
  background: #5e5df0;
  border-radius: 999px;
  box-shadow: #5e5df0 0 10px 20px -10px;
  box-sizing: border-box;
  color: rgba(255, 255, 255, 1);
  font-family: "Amatic SC", cursive, sans-serif;
  font-size: 30px;
  font-weight: 500;
  line-height: 24px;
  letter-spacing: 3px;
  opacity: 1;
  outline: 0 solid transparent;
  padding: 8px 2rem;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: fit-content;
  word-break: break-word;
  border: 0;
  /* margin-left: -15px; */
}



.button-34:hover {
  cursor: url("../images/curson_btn_pa2_icon.ico"), auto;
}

.socials {
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
}
.socials a {
  font-size: 2rem;
  padding: 0.5rem 1.25rem;
}

#joyDiv {
  display: none;
}

.order-1 {
  order: 1;
}
.order-2 {
  order: 2;
}
.order-3 {
  order: 3;
}

@media only screen and (max-width: 1024px) and (min-height: 650px) {
  .game-name {
    padding: 0;
    margin: 0px;
  }
  .main-game-area {
    flex-direction: column;
  }
  #underworld-bg {
    margin: 0;
  }

  #scores {
    display: flex;
    writing-mode: horizontal-tb;
  }

  #scores > h2 {
    padding: 1rem;
    margin: 0px;
  }

  #restart{
    transform: rotate(0deg);
    margin: 0px;
  }

  .button-wrap {
    padding: 1rem;
  }

  .order-1 {
    order: 3;
  }
  .order-2 {
    order: 2;
  }
  .order-3 {
    order: 1;
  }
}

@media only screen and (max-width: 560px) {
  #scores > h2 {
    font-size: 2rem;
  }
}

@media only screen and (max-width: 450px) {
  .game-name {
    font-size: 2rem;
  }
  .socials a {
    font-size: 1.5rem;
    padding: 0.25rem 1rem;
  }

  #scores > h2 {
    font-size: 1.5rem;
    padding: 0.25rem 1rem;
  }

  .button-wrap {
    padding: 0.5rem;
  }
}

@media only screen and (max-width: 285px) {
  #scores > h2 {
    font-size: 1.5rem;
  }
}

